fix scrollbar location

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -76,13 +76,13 @@ th,td{padding:8px}
 .required{font-size:.8em;font-style:italic}
 .header{z-index:1000;display:block;position:fixed;top:0;left:0;width:320px;height:100%;-webkit-transition:all .5s ease 0s;-moz-transition:all .5s ease 0s;-o-transition:all .5s ease 0s;transition:all .5s ease 0s;-webkit-transform:translateX(-290px);-moz-transform:translateX(-290px);-o-transform:translateX(-290px);transform:translateX(-290px);}
 .header.open{-webkit-transform:translateX(0);-moz-transform:translateX(0);-o-transform:translateX(0);transform:translateX(0)}
-.header-content-center,.header-content-right{float:left;height:100%;padding-top:1em;background:White}
-.header-loggedout-menu,.header-loggedin-menu{width:260px;height:100%;overflow:auto;margin:0 auto;}
+.header-content-center,.header-content-right{float:left;height:100%;background:White}
+.header-loggedout-menu,.header-loggedin-menu{width:260px;margin:0 auto;}
 .header-loggedout-menu h4,.header-loggedin-menu h4{margin:1em 0}
 .header-loggedout-menu ul,.header-loggedin-menu ul{display:block;list-style:none}
-.header-content-center{width:289px;border-right:1px Black solid}
+.header-content-center{width:289px;border-right:1px Black solid;overflow:auto}
 .header-content-right{width:30px;background:transparent}
-.header-logo{cursor:pointer;width:30px;height:30px;margin:0 0 0 1em}
+.header-logo{cursor:pointer;width:30px;height:30px;margin:1em 0 0 1em}
 .header-button{display:block;width:235px;overflow:hidden;margin:3px auto;padding:.5em 10px;position:relative;text-align:left}
 .header-action-add,.header-action{position:absolute;top:-14px;right:15px;font-size:40px;cursor:pointer}
 .header-action-add{top:-7px;right:10px;font-size:30px;color:White}
