--- a/styles/components/header.styl
+++ b/styles/components/header.styl
@@ -15,14 +15,11 @@
 .header-content-right
   float left
   height 100%
-  padding-top 1em
   background White
 
 .header-loggedout-menu
 .header-loggedin-menu
   width 260px
-  height 100%
-  overflow auto
   margin 0 auto
   h4
     margin 1em 0
@@ -33,6 +30,7 @@
 .header-content-center
   width 289px
   border-right 1px Black solid
+  overflow auto
 .header-content-right
   width 30px
   background transparent
@@ -41,7 +39,7 @@
   cursor pointer
   width 30px
   height 30px
-  margin 0 0 0 1em
+  margin 1em 0 0 1em
 
 .header-button
   display block
